# plant-project-embbed-dtu

./: .gitignore  README.md  example_main.c
plant-project/: CMakeLists.txt
plant-project/exercises/: e_11.c  e_12.c
plant-project/main/: CMakeLists.txt  blink_example_main.c  main.c
plant-project/main/sensor_tasks/: display.c  display.h
